Update TestPlugin.java